# recruitement-task

./: .env.example  README.md  pyproject.toml
models/: fake_news_model.pkl
notebooks/: 01_dataset_creation.ipynb  02_data_exploration.ipynb  03_experiments.ipynb
src/: app.py  env.py  utils.py
