[project]
name = "recruitment-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.3.0",
    "jupyter>=1.1.1",
    "kaggle>=2.1.2",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
]
